# pyplate

./: 404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  setup.cfg  setup.py  tox.ini
api/: index.html
authors/: index.html
contributing/: index.html
docs/: installation.md  usage.md
history/: index.html
installation/: index.html
python_boilerplate/: __init__.py  cli.py
search/: search_index.json
tests/: test_python_boilerplate.py
usage/: index.html
