

[aliases]
release = sdist bdist_wheel
test = pytest

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:python_boilerplate/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[darglint]
docstring_style=sphinx

[flake8]
exclude = docs/*,setup.py
max-line-length = 88
docstring_style=sphinx
[tool:pytest]
addopts = --ignore=setup.py
testpaths = tests/


[options]
include_package_data = True
packages = find:

install_requires =
  Click

[options.extras_require]
dev =
  black
  bump2version
  darglint
  flake8-docstrings
  flake8
  isort
  toml

dist =
  twine

docs =
  mkdocs-autorefs
  mkdocs-include-markdown-plugin
  mkdocs-material-extensions
  mkdocs-material
  mkdocs
  mkdocstrings-python-legacy
  mkdocstrings
  Sphinx
  watchdog

test =
  pytest
  pytest-cov
  safety
  tox


[metadata]
name = python_boilerplate
version = 0.1.0
author = Michael Park
author_email = mike@mhpark.xyz
url = "https://github.com/KingMichaelPark/python_boilerplate"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
platform = any
keywords =
  "python_boilerplate"
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
project_urls =
    Homepage = "https://github.com/KingMichaelPark/python_boilerplate"
    Repository = "https://github.com/KingMichaelPark/python_boilerplate"
    Changelog = "https://github.com/KingMichaelPark/python_boilerplate/blob/master/CHANGELOG.md"
    Documentation = "https://KingMichaelPark.github.io/python_boilerplate"

